--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
     </header>
     <div>
         <input id='input' placeholder="Type your word here">
-        <button id='translateNow' onclick='translateNewWord()'>Translate</button>
+        <button id='translateNow'>Translate</button>
     </div>
-    <br><br>
-    <div>
-        The translation is <span id='translatedWord'></span>
-    </div>
-    <script src="main.js"></script>
+    
 </body>
+<script src="main.js"></script>
 </html>
